updated html, css, and javascript code

--- a/Day 4 - Font Viewer/index.html
+++ b/Day 4 - Font Viewer/index.html
@@ -11,8 +11,25 @@
 <body>  
     <div class="container">
         <div class="first-box">
-            <input>
-        </div>>
+            <p>Type something here...</p>
+            <textarea id="input" placeholder="Font changed text will appear here"></textarea>
+        </div>
+        <div class="first-font">
+            <p>Courier New</p>
+            <textarea readonly id="input-one" placeholder="Font changed text will appear here"></textarea>
+        </div>
+        <div class="second-font">
+            <p>Gill Sans</p>
+            <textarea readonly id="input-two" placeholder="Font changed text will appear here"></textarea>
+        </div>
+        <div class="third-font">
+            <p>Trebuchet MS</p>
+            <textarea readonly id="input-three" placeholder="Font changed text will appear here"></textarea>
+        </div>
+        <div class="fourth-font">
+            <p>Franklin Gothic Medium</p>
+            <textarea readonly id="input-four" placeholder="Font changed text will appear here"></textarea>
+        </div>
     </div>
 </body>
 </html>
