updated title for project day 8

--- a/Day 8 - Loops In Action/index.html
+++ b/Day 8 - Loops In Action/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>JavaScript Loops in Action</h1>
+  <h1>JavaScript Loops in Action - Day 8</h1>
   <section id="calculator">
     <h2>JavaScript Calculator</h2>
     <p>Determine the sum of all numbers (beginning at zero) up to a number of your choice.</p>
