--- a/Day 9 - Tic Tac Toe App/index.html
+++ b/Day 9 - Tic Tac Toe App/index.html
@@ -7,9 +7,10 @@
         <title>Tic Tac Toe</title>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
-        <header>
+        <header id="main-header">
             <h1>Play Tic, Tac, Toe</h1>
             <p>Built with HTML, CSS, JavaScript and - of course - lots of love!</p>
         </header>
@@ -22,8 +23,8 @@
                         <input type="text" name="username" id="playername">
                     </div>
                     <div>
-                        <button type="button">Cancel</button>
-                        <button type="submit">Confirm</button>
+                        <button type="button" class="btn btn-alt">Cancel</button>
+                        <button type="submit" class="btn">Confirm</button>
                     </div>
                 </form>
             </aside>
@@ -34,7 +35,7 @@
                           <h2>Player 1</h2>
                           <h3>PLAYER NAME</h3>
                           <p>X</p>
-                          <button>Edit</button>
+                          <button class="btn btn-alt">Edit</button>
                         </article>
                     </li>
                     <li>
@@ -42,11 +43,11 @@
                             <h2>Player 2</h2>
                             <h3>PLAYER NAME</h3>
                             <p>O</p>
-                          <button>Edit</button>
+                          <button class="btn btn-alt">Edit</button>
                         </article>
                     </li>
                 </ol>
-                <button>Start New Game</button>
+                <button class="btn">Start New Game</button>
             </section>
             <section id="active-game">
                 <article>
