--- a/Day 9 - Tic Tac Toe App/index.html
+++ b/Day 9 - Tic Tac Toe App/index.html
@@ -7,7 +7,9 @@
         <title>Tic Tac Toe</title>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.css"/>
+        <link rel="stylesheet" href="styles/overlays.css"/>
+        <link rel="stylesheet" href="styles/configuration.css">
     </head>
     <body>
         <header id="main-header">
@@ -15,10 +17,11 @@
             <p>Built with HTML, CSS, JavaScript and - of course - lots of love!</p>
         </header>
         <main>
-            <aside>
+            <div id="backdrop"></div>
+            <aside class="modal" id="config-overlay">
                 <h2>Choose your name</h2>
                 <form>
-                    <div>
+                    <div class="form-control">
                         <label for="playername">Player name</label>
                         <input type="text" name="username" id="playername">
                     </div>
@@ -34,7 +37,7 @@
                         <article>
                           <h2>Player 1</h2>
                           <h3>PLAYER NAME</h3>
-                          <p>X</p>
+                          <p class="player-symbol">X</p>
                           <button class="btn btn-alt">Edit</button>
                         </article>
                     </li>
@@ -42,7 +45,7 @@
                         <article>
                             <h2>Player 2</h2>
                             <h3>PLAYER NAME</h3>
-                            <p>O</p>
+                            <p class="player-symbol">O</p>
                           <button class="btn btn-alt">Edit</button>
                         </article>
                     </li>
