--- a/Day 9 - Tic Tac Toe App/index.html
+++ b/Day 9 - Tic Tac Toe App/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="styles/styles.css"/>
         <link rel="stylesheet" href="styles/overlays.css"/>
         <link rel="stylesheet" href="styles/configuration.css">
+        <link rel="stylesheet" href="styles/game.css">
     </head>
     <body>
         <header id="main-header">
@@ -38,7 +39,7 @@
                           <h2>Player 1</h2>
                           <h3>PLAYER NAME</h3>
                           <p class="player-symbol">X</p>
-                          <button class="btn btn-alt">Edit</button>
+                          <button class="btn btn-alt" id="edit-player-1-btn">Edit</button>
                         </article>
                     </li>
                     <li>
@@ -46,29 +47,29 @@
                             <h2>Player 2</h2>
                             <h3>PLAYER NAME</h3>
                             <p class="player-symbol">O</p>
-                          <button class="btn btn-alt">Edit</button>
+                          <button class="btn btn-alt" id="edit-player-2-btn">Edit</button>
                         </article>
                     </li>
                 </ol>
                 <button class="btn">Start New Game</button>
             </section>
             <section id="active-game">
-                <article>
-                    <h3>You won! <span id="winner-name">PLAYER NAME</span></h3>
+                <article id="game-over">
+                    <h2>You won! <span id="winner-name">PLAYER NAME</span></h2>
                     <p>Click "Start New Game!", above to start a new game!</p>
                 </article>
 
                 <p>It's your turn <span id="active-player-name">PLAYER NAME</span>!</p>
-                <ol>
+                <ol id="game-board">
+                    <li class="disabled">X</li>
                     <li></li>
-                    <li></li>
-                    <li></li>
+                    <li class="disabled">O</li>
 
                     <li></li>
-                    <li></li>
+                    <li class="disabled">X</li>
                     <li></li>
 
-                    <li></li>
+                    <li class="disabled">O</li>
                     <li></li>
                     <li></li>
                 </ol>
