--- a/Day 9 - Tic Tac Toe App/index.html
+++ b/Day 9 - Tic Tac Toe App/index.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="styles/overlays.css"/>
         <link rel="stylesheet" href="styles/configuration.css">
         <link rel="stylesheet" href="styles/game.css">
+        <script src="scripts/config.js" defer></script>
+        <script src="scripts/game.js" defer></script>
+        <script src="scripts/app.js" defer></script>
     </head>
     <body>
         <header id="main-header">
