--- a/Day 9 - Tic Tac Toe App/index.html
+++ b/Day 9 - Tic Tac Toe App/index.html
@@ -24,16 +24,19 @@
             <div id="backdrop"></div>
             <aside class="modal" id="config-overlay">
                 <h2>Choose your name</h2>
+
                 <form>
                     <div class="form-control">
                         <label for="playername">Player name</label>
-                        <input type="text" name="username" id="playername">
+                        <input type="text" name="playername" id="playername" required>
+                        <p id="config-errors"></p>
                     </div>
                     <div>
-                        <button type="button" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
+                        <button type="reset" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
                         <button type="submit" class="btn">Confirm</button>
                     </div>
                 </form>
+
             </aside>
             <section id="game-configuration">
                 <ol>
