--- a/Day 9 - Tic Tac Toe App/index.html
+++ b/Day 9 - Tic Tac Toe App/index.html
@@ -29,8 +29,8 @@
                     <div class="form-control">
                         <label for="playername">Player name</label>
                         <input type="text" name="playername" id="playername" required>
-                        <p id="config-errors"></p>
                     </div>
+                    <p id="config-errors"></p>
                     <div>
                         <button type="reset" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
                         <button type="submit" class="btn">Confirm</button>
@@ -41,19 +41,19 @@
             <section id="game-configuration">
                 <ol>
                     <li>
-                        <article>
+                        <article id="player-1-data">
                           <h2>Player 1</h2>
                           <h3>PLAYER NAME</h3>
                           <p class="player-symbol">X</p>
-                          <button class="btn btn-alt" id="edit-player-1-btn">Edit</button>
+                          <button class="btn btn-alt" id="edit-player-1-btn" data-playerid="1">Edit</button>
                         </article>
                     </li>
                     <li>
-                        <article>
+                        <article id="player-2-data">
                             <h2>Player 2</h2>
                             <h3>PLAYER NAME</h3>
                             <p class="player-symbol">O</p>
-                          <button class="btn btn-alt" id="edit-player-2-btn">Edit</button>
+                          <button class="btn btn-alt" id="edit-player-2-btn" data-playerid="2">Edit</button>
                         </article>
                     </li>
                 </ol>
