--- a/Day 9 - Tic Tac Toe App/index.html
+++ b/Day 9 - Tic Tac Toe App/index.html
@@ -57,7 +57,7 @@
                         </article>
                     </li>
                 </ol>
-                <button class="btn">Start New Game</button>
+                <button class="btn" id="start-game-btn">Start New Game</button>
             </section>
             <section id="active-game">
                 <article id="game-over">
@@ -67,15 +67,15 @@
 
                 <p>It's your turn <span id="active-player-name">PLAYER NAME</span>!</p>
                 <ol id="game-board">
-                    <li class="disabled">X</li>
                     <li></li>
-                    <li class="disabled">O</li>
-
                     <li></li>
-                    <li class="disabled">X</li>
                     <li></li>
 
-                    <li class="disabled">O</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+
+                    <li></li>
                     <li></li>
                     <li></li>
                 </ol>
