--- a/Day 9 - Tic Tac Toe App/index.html
+++ b/Day 9 - Tic Tac Toe App/index.html
@@ -18,7 +18,7 @@
     <body>
         <header id="main-header">
             <h1>Play Tic, Tac, Toe</h1>
-            <p>Built with HTML, CSS, JavaScript and - of course - lots of love!</p>
+            <p>Built with HTML, CSS, and JavaScript by shuu</p>
         </header>
         <main>
             <div id="backdrop"></div>
