added javascript code
- added all the functionalities needed for background color generator change

--- a/Day 14 - Color Flipper/index.html
+++ b/Day 14 - Color Flipper/index.html
@@ -21,7 +21,7 @@
         </header>
         <main>
             <div class="center-box">
-                <p>Background Color: <span class="bg-value">#123456</span></p>
+                <p>Background Color: <span class="bg-value">#FFFFFF</span></p>
             </div>
             <button id="button">Click Me</button>
         </main>
