--- a/Day 7 - Even or Odd/index.html
+++ b/Day 7 - Even or Odd/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Functions</title>
+  <title>Even Or Odds</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
