--- a/Day 19 - Reviews Quotes/index.html
+++ b/Day 19 - Reviews Quotes/index.html
@@ -12,7 +12,7 @@
         <h1 class="header">Our <span class="span-element">Revi</span>ews</h1>
 
         <main class="container"> 
-            <img id="icon" src="images/blank-profile.png" width="150px" height="150px">
+            <img id="icon" src="images/susan-smith.jpg" width="150px" height="150px">
             <h2 id="name">Susan Smith</h2>
             <p id="title">Web Developer</p>
             <p id="description">I'm baby meggings twee health goth +1. Bicycle rights tumeric chartreuse before they sold out chambray pop-up. Shaman humblebrag pickled coloring book salvia hoodie, cold-pressed four dollar toast everyday carry</p>
