--- a/Day 21 - Rock Paper Scissors/index.html
+++ b/Day 21 - Rock Paper Scissors/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/round-section.css">
+    <link rel="stylesheet" href="styles/game-section.css">
 </head>
 <body>
     <header>
@@ -18,14 +19,27 @@
     <section class="round-section">
         <div class="round-section-container">
             <p>How many rounds?</p>
-            <input type="number" placeholder="Enter how many rounds!" min="1" max="10">
+            <input type="number" placeholder="Enter" min="1" max="10">
             <div>
                 <button id="play-button">Let's play!</button>
             </div>
         </div>
     </section>
 
-    <main>
+    <main class="game-section">
+        <h1>It's your turn!</h1>
+
+        <div id="button-container">
+            <button id="rock-button">
+                <img src="images/rock.png" alt="">
+            </button>
+            <button id="paper-button">
+                <img src="images/paper.png" alt="">
+            </button>
+            <button id="scissor-button">
+                <img src="images/scissor.png" alt="">
+            </button>
+        </div>
     </main>
 
 
