--- a/Day 21 - Rock Paper Scissors/index.html
+++ b/Day 21 - Rock Paper Scissors/index.html
@@ -29,7 +29,7 @@
     <main class="game-section">
         <h1>It's your turn!</h1>
 
-        <div id="button-container">
+        <div class="button-container">
             <button id="rock-button">
                 <img src="images/rock.png" alt="">
             </button>
@@ -40,6 +40,25 @@
                 <img src="images/scissor.png" alt="">
             </button>
         </div>
+
+        <p class="victory-indicator win">You won!</p>
+
+        <div class="win-count">
+            <p>You've won <span>0</span> times!</p>
+        </div>
+
+        <ul class="win-or-lose-box">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </main>
 
 
